Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumObjUndefined.quorum
class Main
    action Main
        Number v = Test()
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Number
        return undefined
    end
end