Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberTextField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        text var = "text"
        return var
    end
end